# aws-open-data-registry-neural-search

./: .gitignore  Makefile  README.md  cdk.json  codestar.json  config.json  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  schema.json
frontend/: 0.0-queries.ipynb  Open_Data_Registry.py  queries.py  render_results.py  scratch.py  utils.py
frontend/pages/: 1_Browse_Datasets.py  1_Search_Datasets.py  2_Browse_Datasets.py  2_Explore_Datasets.py  2_Search_Datasets.py  3_GraphQL.py  3_Query.py
frontend/src/: constants.py  queries.py  utils.py
functions/load_vdb/: app.py  event.json  model.py  requirements.txt
functions/publish_records/: app.py  event.json
lib/: aws-open-data-registry-neural-search-stack.ts  data-ingestion.ts  vector-database.ts
notebooks/: 0.0-aws-open-data-registry-neural-search-EDA.ipynb  0.0-weaviate-controller.ipynb  0.0-weaviate-dev.ipynb  0.1-weaviate-dev.ipynb
notebooks/frontend/: 0.0-queries.ipynb
scripts/: create_schema.sh  delete_schema.sh
src/: config.sh
tasks/load-odr/: Dockerfile  requirements.txt
tasks/load-odr/src/: app.py  references-spec.json
tasks/load-odr/src/jsonviate/: __init__.py  model.py
tasks/load_odr/: Dockerfile  app.py  json2weaviate.py  mappings-spec.json  references-spec.json  requirements.txt  schema.json
test/: aws-open-data-registry-neural-search.test.ts
